[USD-38] feat : 의도적 지연 Loading 추가

--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,15 @@
     --text-caption-md: 12px;
     --text-caption-md-weight: 500;
 }
+
+@keyframes spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+.spinner {
+	animation: spin 1s linear infinite;
+}
