[USD-52] feat : 영상 넘어가기 일시정지 수정, code로 로그인 구현

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,11 @@
     font-family: 'Pretendard', sans-serif;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
+
 @theme {
   
     --color-background : #1F1F20;
